force-app/main/default/objects/Payment_Information__mdt/Payment_Information__mdt.object-meta.xml
<CustomObject>
    <label>Payment Information</label>
    <pluralLabel>Payment Informations</pluralLabel>
</CustomObject>