force-app/main/default/objects/Payment_Information__mdt/fields/Authorization_Mode__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Mode__c</fullName>
    <label>Authorization Mode</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>