force-app/main/default/objects/Payment_Information__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>