force-app/main/default/objects/Payment_Information__mdt/fields/Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_URL__c</fullName>
    <label>Return URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>